--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@ License: You must have a valid license purchased only from https://themes.getboo
 
 <head>
   <meta charset="utf-8" />
-  <title>Metronic | React Demo 2</title>
+  <title>Портал мероприятий</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -31,9 +31,9 @@ License: You must have a valid license purchased only from https://themes.getboo
     -->
   <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/media/logos/favicon.ico" />
   <link rel="stylesheet"
-    href="//fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto:300,400,500,600,700" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
+    href="css/poppins-roboto.css" />
+  <link rel="stylesheet" href="css/material-icons.css" />
+  <link rel="stylesheet" href="css/roboto.css" />
   <!-- SPLASH SCREEN-->
   <link rel="stylesheet" id="layout-styles-anchor" href="%PUBLIC_URL%/css/splash-screen.css" />
   <!--  Setup `default`, `es2015`, `es2016`, `es2017`, and `Intl` polyfills from https://cdn.polyfill.io/v3/url-builder/ -->
