--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@ License: You must have a valid license purchased only from https://themes.getboo
   <meta charset="utf-8" />
   <title>Портал мероприятий</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -37,8 +38,6 @@ License: You must have a valid license purchased only from https://themes.getboo
   <!-- SPLASH SCREEN-->
   <link rel="stylesheet" id="layout-styles-anchor" href="%PUBLIC_URL%/css/splash-screen.css" />
   <!--  Setup `default`, `es2015`, `es2016`, `es2017`, and `Intl` polyfills from https://cdn.polyfill.io/v3/url-builder/ -->
-  <script crossorigin="anonymous"
-    src="https://polyfill.io/v3/polyfill.min.js?features=es2017%2Cdefault%2Ces2015%2Ces2016%2CIntl"></script>
 </head>
 <!-- <body dir="rtl">-->
 <!-- RTL version body -->
